# riparr

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  docker.yml
src/riparr/: __init__.py  __main__.py
src/riparr/cli/: app.py
src/riparr/cli/commands/: info.py  queue.py  rip.py  watch.py
src/riparr/config/: __init__.py  settings.py
src/riparr/core/: __init__.py  disc.py  job.py  title.py
src/riparr/detection/: __init__.py  poller.py  udev.py  watcher.py
src/riparr/encoder/: __init__.py  handbrake.py  parser.py
src/riparr/metadata/: __init__.py  arm_api.py  dvdid.py  mediainfo.py  tmdb.py
src/riparr/output/: __init__.py  naming.py
src/riparr/queue/: __init__.py  manager.py  markers.py
src/riparr/ripper/: __init__.py  makemkv.py  parser.py  selector.py
src/riparr/tui/: __init__.py  dashboard.py  status.py
tests/: __init__.py  test_naming.py  test_parser.py  test_selector.py
