[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "riparr"
version = "0.1.0"
description = "Modern Python DVD/Blu-ray ripper with automated disc detection and encoding"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Riparr Contributors" }]
keywords = ["dvd", "bluray", "ripper", "makemkv", "handbrake", "media"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer[all]>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "structlog>=24.0",
    "pydvdid-m>=1.1",
    "pymediainfo>=6.0",
    "pyudev>=0.24",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
riparr = "riparr.cli.app:main"

[project.urls]
Homepage = "https://github.com/riparr/riparr"
Repository = "https://github.com/riparr/riparr"
Issues = "https://github.com/riparr/riparr/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/riparr"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["riparr"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_decorators = false
disallow_untyped_calls = false
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "pyudev.*",
    "pydvdid.*",
    "pymediainfo.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["riparr.core.disc"]
disable_error_code = ["prop-decorator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
